fixed alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body,
   align-items: start;
   justify-content: center;
   width: 100%;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -33,18 +32,13 @@ body,
   display: flex;
   flex-direction: column;
   align-items: start;
-  justify-content: center;
+  justify-content: flex-start;
   flex-grow: 1;
-  height: 100vh;
   overflow-y: auto;
   margin: 0;
   padding: 0;
   background-color: #e1f0f587 !important;
-  border-color: transparent !important;
-  border-top-left-radius: 30px !important;
-  border-bottom-left-radius: 30px !important;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
+  border-radius: 30px 0 0 30px !important;
 }
 
 /*....................Styles for dashboard component..............................*/
